After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 591235 - Compile warnings in gweather-timezone.c
Compile warnings in gweather-timezone.c
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other Linux
: Normal minor
: 2.22.0
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2009-08-09 13:12 UTC by Luca Ferretti
Modified: 2009-09-08 23:47 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28



Description Luca Ferretti 2009-08-09 13:12:08 UTC
gweather-timezone.c: In function ‘gweather_timezones_parse_xml’:
gweather-timezone.c:155: warning: ‘dst_offset’ may be used uninitialized in this function
gweather-timezone.c:155: note: ‘dst_offset’ was declared here
Comment 1 Vincent Untz 2009-09-08 23:47:35 UTC
Fixed in master.