[libgweather] Initialiaze variables to avoid build warning

http://bugzilla.gnome.org/show_bug.cgi?id=591235